# signal-deviation-alerts

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  Makefile  README.md  TODO  alerts.py  alerts.yaml  docker-compose.yaml  log.py  pyproject.toml  requirements.txt  server_alerts.yaml  signals.py  util.py
alerts/: btc.yaml  server.yaml
api/: Dockerfile  docker-compose.yaml  goss.yaml  goss_wait.yaml
api/mormo/: Dockerfile  api_mormo.yaml  docker-compose.yaml  entrypoint.sh
api/mormo/test/alerts/: btc_price_4pcnt_4h.yaml
cli/: Dockerfile  docker-compose.yaml  goss.yaml  goss_wait.yaml
docker_logger/: Dockerfile  docker-compose.yaml  docker_logs_to_matrix.sh  logger.crontab
docker_logger/scripts/: docker_logs_to_matrix.sh  log_stats.sh  stats.sh
log_queue/: Dockerfile  docker-compose.yaml
scripts/: docker_logs_to_matrix.crontab  log_directory_to_matrix.crontab  log_directory_to_matrix.sh
server_alerts/: Dockerfile  docker-compose.yaml
src/: alerts.py  api.py  c.py  log.py  message_queue.py  model.py  signals.py  util.py
stats/: Dockerfile  docker-compose.yaml  entrypoint.sh  logger.crontab
stats/scripts/: log_stats.sh
